--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    implementation 'androidx.navigation:navigation-ui:2.3.4'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
-    implementation 'androidx.navigation:navigation-ui:2.3.3'
+    implementation 'androidx.navigation:navigation-ui:2.3.4'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
