--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,14 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'androidx.navigation:navigation-ui:2.3.4'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
-    implementation 'androidx.navigation:navigation-ui:2.3.4'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.work:work-runtime:2.5.0'
+    implementation('com.googlecode.json-simple:json-simple:1.1.1')
+            { exclude group: 'junit', module: 'junit' }
 
 }
