--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Register"></activity>
+        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".RoutineActivity" />
+        <activity android:name=".TrainingActivity" />
+        <activity android:name=".Register" />
         <activity android:name=".Planificador" />
-        <activity android:name=".Login">
-
-        </activity>
-        <activity android:name=".MainActivity" >
+        <activity
+            android:name=".Login"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Perfil" />
     </application>
 
 </manifest>
